Revision history for Perl distribution Convert-Pheno

0.19 2024-0X-XXT00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Updated docs
 - Updated how to obtain nproc for FreeBSD
 - Moved t/{ohdsi,protobuff}.t to xt

0.18 2024-02-29T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Updated docs
 - Updated resources in PXF.pm
 - Added info.REDCap_columns to REDCap.pm
 - Renamed keys in REDCap mapping (schema|src|files):
   o radio -> selector
   o dict  -> dictionary 
   o map   -> mapping
 - Added info.convertPheno to individuals.json
 - Added project.version to mapping (schema|src|files)
 - Refactored CSV.pm and IO.pm to IO::CSVHandler and IO::FileIO
 - Implemented -o{csv,jsonf}(to be used with -i{bff|pxf}

0.17 2024-02-03T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Updated docs
 - Fixed typo in _info.VISIT_OCCURENCE -> _info.VISIT_OCCURRENCE

0.16 2023-12-26T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Implemented restriction on I/O format duplication (ibff->obff)
 - Updated docs

0.15 2023-11-30T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Changed 'windows-latest' to 'windows-2019' in GHA build-and-test.yml
 - Refactored .pm to improve readibility and maintanability

0.14 2023-11-21T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Fixed error on pxf.{json,yaml} @pxf-tools-cli examples (v1.0.0-RC3)
   o label": "Vitamin E" -> label": "atorvastatin"
 - Updated docs

0.13 2023-09-12T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Pushing new version after passing all tests

0.12_3 2023-09-12T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Added support for Windows Server OS
 - Added changes to pass windows-latest tests in GitHub
   o Replaced PerlIO::gzip by core IO::Uncompress::G[un]zip
   o Adapted t/{args,cli.t}

0.12_2 2023-09-07T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Added Data::Leaf::Walker to Makefile.PL

0.12_1 2023-09-06T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)

 - Extended the documentation (e.g., docs/tbl/*md)