@@ -59,7 +59,7 @@ convert-pheno \[-i input-type\] &lt;infile> \[-o output-type\] &lt;outfile> \[-o
              Compatible with -i(bff|pxf):
              -ocsv                    Flatten data to CSV
              -ojsonf                  Flatten data to 1D-JSON (or 1D-YAML if suffix is .yml|.yaml)
-             -ojsonld (experimental)  JSON-LD (compatible with RDF ecosystem)
+             -ojsonld (experimental)  JSON-LD (compatible with RDF ecosystem; YAML if suffix is .ymlld|.yamlld)
 
      Options:
        -exposures-file                CSV file with a list of 'concept_id' considered to be exposures (with -iomop)
