@@ -440,7 +440,7 @@ convert-pheno [-i input-type] <infile> [-o output-type] <outfile> [-options]
              Compatible with -i(bff|pxf):
              -ocsv                    Flatten data to CSV
              -ojsonf                  Flatten data to 1D-JSON (or 1D-YAML if suffix is .yml|.yaml)
-             -ojsonld (experimental)  JSON-LD (compatible with RDF ecosystem)
+             -ojsonld (experimental)  JSON-LD (compatible with RDF ecosystem; YAML if suffix is .ymlld|.yamlld)
 
      Options:
        -exposures-file                CSV file with a list of 'concept_id' considered to be exposures (with -iomop)
