@@ -7,7 +7,7 @@ use feature qw(say);
 use JSONLD;
 use Data::Dumper;
 use Exporter 'import';
-our @EXPORT_OK = qw(do_bff2jsonld);
+our @EXPORT_OK = qw(do_bff2jsonld do_pxf2jsonld);
 
 #$Data::Dumper::Sortkeys = 1;
 
@@ -32,6 +32,32 @@ sub do_bff2jsonld {
 
     # Expand the data
     my $expanded = $jld->expand($bff);
+
+    # Return the expanded data
+    return $expanded;
+}
+
+###############
+###############
+#  PXF2JSONLD #
+###############
+###############
+
+sub do_pxf2jsonld {
+
+    my ( $self, $pxf ) = @_;
+
+    # Premature return
+    return unless defined($pxf);
+
+    # Create new JSONLD object
+    my $jld = JSONLD->new();
+
+    # Add key for @contect
+    $pxf->{'@context'} = { '@vocab' => 'http://example.org/' };
+
+    # Expand the data
+    my $expanded = $jld->expand($pxf);
 
     # Return the expanded data
     return $expanded;
