@@ -5,6 +5,7 @@ Revision history for Perl distribution Convert-Pheno
  - Updated docs
  - Updated how to obtain nproc for FreeBSD
  - Moved t/{ohdsi,protobuff}.t to xt
+ - Added experimental -ojsond (JSON-LD) (to be used with -i{bff|pxf}
 
 0.18 2024-02-29T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)
 
@@ -18,7 +19,7 @@ Revision history for Perl distribution Convert-Pheno
  - Added info.convertPheno to individuals.json
  - Added project.version to mapping (schema|src|files)
  - Refactored CSV.pm and IO.pm to IO::CSVHandler and IO::FileIO
- - Implemented -o{csv,jsonf}(to be used with -i{bff|pxf}
+ - Implemented -o{csv,jsonf} (to be used with -i{bff|pxf}
 
 0.17 2024-02-03T00:00:00Z (Manuel Rueda <mrueda@cpan.org>)
 
